link the font style

--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./assets/CSS/style.css">
   <title>MOYA(R) portfolio</title>
 </head>
 <body>
-  <div id="our-services">
+  <section id="our-services">
     <div class="our-services__bg">
       <!-- circles in our services background -->
       <div></div>
@@ -18,32 +19,32 @@
       <div></div>
       <div></div>
     </div>
-      <div class="our-services__container">
-        <div class="service service__shap1">
-          <div class="services-topBar"></div>
-          <img class="service-icon" src="" alt="">
-          <h1>Web developers</h1>
-          <p>orem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec </p>
-        </div>
-        <div class="service service__shap2">
-          <div class="services-topBar"></div>
-          <img class="service-icon" src="" alt="">
-          <h1>Web developers</h1>
-          <p>orem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec </p>
-        </div>
-        <div class="service service__shap1">
-          <div class="services-topBar"></div>
-          <img class="service-icon" src="" alt="">
-          <h1>Web developers</h1>
-          <p>orem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec </p>
-        </div>
-        <div class="service service__shap2">
-          <div class="services-topBar"></div>
-          <img class="service-icon" src="" alt="">
-          <h1>Web developers</h1>
-          <p>orem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec </p>
-        </div>
+    <di{v class="our-services__container">
+      <div class="service service__shap1">
+        <div class="services-topBar"></div>
+        <img class="service-icon" src="" alt="">
+        <h1>Web developers</h1>
+        <p>orem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec </p>
       </div>
-    </div>
+      <div class="service service__shap2">
+        <div class="services-topBar"></div>
+        <img class="service-icon" src="" alt="">
+        <h1>Web developers</h1>
+        <p>orem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec </p>
+      </div>
+      <div class="service service__shap1">
+        <div class="services-topBar"></div>
+        <img class="service-icon" src="" alt="">
+        <h1>Web developers</h1>
+        <p>orem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec </p>
+      </div>
+      <div class="service service__shap2">
+        <div class="services-topBar"></div>
+        <img class="service-icon" src="" alt="">
+        <h1>Web developers</h1>
+        <p>orem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec </p>
+      </div>
+    </div>}
+  </section>
 </body>
 </html>
