Add Content Section To Header Section Relates #3

--- a/index.html
+++ b/index.html
@@ -27,7 +27,11 @@
                     </ul>
                 </div>
             </header>
-          
+            <div class="hero-section--content">
+                <h2 class="hero-section--content__contact-header">"Lorem ipsum, dolor sit amet consectetur."</h2>
+                <p class="hero-section--content__contact-dec">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque repellendus quo quasi voluptatem cum accusantium! Necessitatibus deleniti neque saepe possimus fugiat quod ab a fugit sed. Sit nostrum culpa corrupti!</p>
+                <a href="#contact" class="hero-section--content__contact-btn"><i >Contact Us</i></a>
+            </div>
         </div>
     </section>
 </body>
