--- a/index.html
+++ b/index.html
@@ -32,7 +32,25 @@
                 <p class="hero-section--content__contact-dec">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque repellendus quo quasi voluptatem cum accusantium! Necessitatibus deleniti neque saepe possimus fugiat quod ab a fugit sed. Sit nostrum culpa corrupti!</p>
                 <a href="#contact" class="hero-section--content__contact-btn"><i >Contact Us</i></a>
             </div>
+            <div class="collapse-navbar">
+                <button class="menu-btn" id="open-menu">
+                    <i class="fas fa-bars"></i>
+                </button>
+                <div class="collapse-navbar--container">
+                    <div class="logo-section">
+                        <h1 class="logo-section__logo-text">MOYA TEAM</h1>
+                    </div>
+                    <ul>
+                        <li class="item-link"><a clss="active" href="#service">Our Service</a></li>
+                        <li class="item-link"><a href="#aboutus">About Us</a></li>
+                        <li class="item-link"><a href="#team">Our Team</a></li>
+                        <li class="item-link"><a href="#contact">Contact Us</a></li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </section>
+    <script src="https://kit.fontawesome.com/cea4c25e73.js" crossorigin="anonymous"></script>
+    <script src="./assets/js/main.js"></script>
 </body>
 </html>
