--- a/index.html
+++ b/index.html
@@ -19,32 +19,38 @@
       <div></div>
       <div></div>
     </div>
-    <di{v class="our-services__container">
-      <div class="service service__shap1">
-        <div class="services-topBar"></div>
-        <img class="service-icon" src="" alt="">
-        <h1>Web developers</h1>
-        <p>orem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec </p>
+    <div class="our-services__container">
+  
+      <h1 class="our-services__title">Our Services</h1>
+      <di{v class="our-services__Services-container">
+        <div class="service service__shap1">
+          <div class="services-topBar"></div>
+          <img class="service-icon" src="./img/Our Services/Web developers icon.svg" alt="">
+          <h1>Web developers</h1>
+          <p>orem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec </p>
+        </div>
+        <div class="service service__shap2">
+          <div class="services-topBar"></div>
+          <img class="service-icon" src="./img/Our Services/UX and UI designers icon.svg" alt="">
+          <h1>UX and UI designers</h1>
+          <p>orem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec </p>
+        </div>
+        <div class="service service__shap2">
+          <div class="services-topBar"></div>
+          <img class="service-icon" src="./img/Our Services/Database Design icon.svg" alt="">
+          <h1>Database Design</h1>
+          <p>orem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec </p>
+        </div>
+        <div class="service service__shap1">
+          <div class="services-topBar"></div>
+          <img class="service-icon" src="./img/Our Services/CMS Document icon.svg" alt="">
+          <h1>Database Design</h1>
+          <p>orem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec </p>
+        </div>
       </div>
-      <div class="service service__shap2">
-        <div class="services-topBar"></div>
-        <img class="service-icon" src="" alt="">
-        <h1>Web developers</h1>
-        <p>orem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec </p>
-      </div>
-      <div class="service service__shap1">
-        <div class="services-topBar"></div>
-        <img class="service-icon" src="" alt="">
-        <h1>Web developers</h1>
-        <p>orem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec </p>
-      </div>
-      <div class="service service__shap2">
-        <div class="services-topBar"></div>
-        <img class="service-icon" src="" alt="">
-        <h1>Web developers</h1>
-        <p>orem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec </p>
-      </div>
-    </div>}
+    </div>
+
   </section>
+ 
 </body>
 </html>
