Delete the our service  background temporarily

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
   <section id="our-services">
-    <div class="our-services__bg">
-      <!-- circles in our services background -->
+    <!-- <div class="our-services__bg">
+      circles in our services background
       <div></div>
       <div></div>
       <div></div>
@@ -18,9 +18,8 @@
       <div></div>
       <div></div>
       <div></div>
-    </div>
+    </div> -->
     <div class="our-services__container">
-  
       <h1 class="our-services__title">Our Services</h1>
       <di{v class="our-services__Services-container">
         <div class="service service__shap1">
