--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="hero-section--content">
                 <h2 class="hero-section--content__contact-header">"Lorem ipsum, dolor sit amet consectetur."</h2>
                 <p class="hero-section--content__contact-dec">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque repellendus quo quasi voluptatem cum accusantium! Necessitatibus deleniti neque saepe possimus fugiat quod ab a fugit sed. Sit nostrum culpa corrupti!</p>
-                <a href="#contact" class="hero-section--content__contact-btn"><i >Contact Us</i></a>
+                <a href="#contact" class="hero-section--content__contact-btn">Contact Us</a>
             </div>
             <div class="collapse-navbar">
                 <button class="menu-btn" id="open-menu">
