--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
               <h1 class="logo-section__logo-text">MOYA TEAM</h1>
             </div> -->
             <div class="logo-section">
-              <h1 class="logo-section__logo-text"><img src="./assets//img/Logo.png" alt="log-im" width="100px" height="auto" ></h1>
+              <img src="./assets/img/Logo.png" alt="log-im" width="100px" height="auto" >
             </div>
             <ul>
               <li class="item-link">
