--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="container">
         <header class="hero-section--header">
           <div class="logo-section">
-            <h1 class="logo-section__logo-text"><img src="./assets//img/Logo.png" alt="log-im" width="150px" height="auto" ></h1>
+            <h1 class="logo-section__logo-text"><img src="./assets/img/Logo.png" alt="log-im" width="150px" height="auto" ></h1>
           </div>
           <div class="navbar">
             <ul>
@@ -48,7 +48,7 @@
             <i class="fas fa-bars"></i>
           </button>
           <div class="logo-section">
-            <h1 class="logo-section__logo-text"><img src="./assets//img/Logo.png" alt="log-im" width="100px" height="auto" ></h1>
+            <img src="./assets/img/Logo.png" alt="log-im" width="100px" height="auto" >
           </div>
           <div class="collapse-navbar--container">
             <!-- <div class="logo-section">
