--- a/index.html
+++ b/index.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/CSS/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/CSS/style.css" />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <div class="about-us-section">
+      <div class="container">
+        <div class="container-details">
+          <h1>About Us</h1>
+          <p>
+            orem ipsum dolor sit amet, consectetur adipi cing elit. Ut elit
+            tellus, luctus nec orem ipsumsd dolor sit amet, consectetur
+            adipiscing elit. Ut tellus, luctus nec orem ipsum dolor sit
+          </p>
+        </div>
+        <div class="img-aboutUS">
+          <img src="./assets/CSS/images/ClassicGroup_OfficePic.jpg" alt="" />
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
