ubout us, nav and our service

--- a/index.html
+++ b/index.html
@@ -67,6 +67,22 @@
     </div>
   </section>
 
+  <section class="about-us-section">
+    <div class="bout-us-section__container">
+      <div class="container-details">
+        <h1>About Us</h1>
+        <p>
+          orem ipsum dolor sit amet, consectetur adipi cing elit. Ut elit
+          tellus, luctus nec orem ipsumsd dolor sit amet, consectetur
+          adipiscing elit. Ut tellus, luctus nec orem ipsum dolor sit
+        </p>
+      </div>
+      <div class="img-aboutUS">
+        <img src="./assets/img/ClassicGroup_OfficePic.jpg" alt="" />
+      </div>
+    </div>
+  </section>
+
   <section id="our-services">
     <div class="our-services__container">
       <h1 class="our-services__title">Our Services</h1>
