adding our team section

--- a/index.html
+++ b/index.html
@@ -1,12 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/CSS/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/CSS/style.css" />
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
+    <!-- Satrt ourteam-->
+    <div class="container-team">
+      <h2>Ou<span>r Te</span>am</h2>
+      <div class="container-team-card">
+              <div class="card" >
+        <!--start frontFace-->
+        <section class="front">
+          <div class="front-image" id="member-one"></div>
+          <h4>Ahmed Eid</h4>
+          <h5>front-end developer</h5>
+          <p>for more information <span>Hover me</span></p>
+          <!-- <p class="hover">for more information<span>Hover me</span>  </p> -->
+        </section>
+        <!-- End frontFace-->
+        <!--Start BackFace-->
+        <section class="back">
+          <h3>About Me </h3>
+        <p> work as front-end developer. trainer at gaza sky geeks </p>
+          <a href="http://www.github.com" alt="github" target="_blank"><i class="fa">&#xf092;</i></a>
+          <a href="https://www.linkedin.com/" alt="linkedin" target="_blank"><i class="fa">&#xf0e1;</i></a >
+          <a href="http://www.github.com" alt="github" target="_blank"><i class="fa">&#xf0e0;</i></a>
+        </section>
+      </div>
+   
+    <div class="card">
+      <!--start frontFace-->
+      <section class="front" >
+        <div class="front-image" id="member-two"></div>
+        <h4>Yasmeen Attallah</h4>
+        <h5>front-end developer</h5>
+        <p>for more information <span>Hover me</span></p>
+        <!-- <p class="hover">for more information<span>Hover me</span>  </p> -->
+      </section>
+      <!-- End frontFace-->
+      <!--Start BackFace-->
+      <section class="back">
+        <h3>About Me </h3>
+        <p> work as front-end developer. trainer at gaza sky geeks </p>
+        <a href="http://www.github.com" alt="github" target="_blank"><i class="fa">&#xf092;</i></a>
+        <a href="https://www.linkedin.com/" alt="linkedin" target="_blank"><i class="fa">&#xf0e1;</i></a >
+        <a href="http://www.github.com" alt="github" target="_blank"><i class="fa">&#xf0e0;</i></a>
+      </section>
+    </div>
+  
+   <div class="card " >
+        <!--start frontFace-->
+        <section class="front">
+          <div class="front-image" id="member-three"></div>
+          <h4>Osama Yonis</h4>
+          <h5>front-end developer</h5>
+          <p>for more information <span>Hover me</span></p>
+          <!-- <p class="hover">for more information<span>Hover me</span>  </p> -->
+        </section>
+        <!-- End frontFace-->
+        <!--Start BackFace-->
+        <section class="back">
+          <h3>About Me</h3>
+          <p> work as front-end developer. trainer at gaza sky geeks </p>
+          <a href="http://www.github.com" alt="github" target="_blank"><i class="fa">&#xf092;</i></a>
+          <a href="https://www.linkedin.com/" alt="linkedin" target="_blank"><i class="fa">&#xf0e1;</i></a >
+          <a href="http://www.github.com" alt="github" target="_blank"><i class="fa">&#xf0e0;</i></a>
+        </section>
+      </div>
+      <div class="card">
+        <!--start frontFace-->
+        <section class="front">
+          <div class="front-image" id="member-four"></div>
+          <h4>Mohamed Abadsa</h4>
+          <h5>front-end developer</h5>
+          <p>for more information <span>Hover me</span></p>
+          <!-- <p class="hover">for more information<span>Hover me</span>  </p> -->
+        </section>
+        <!-- End frontFace-->
+        <!--Start BackFace-->
+        <section class="back">
+          <h3>About Me</h3>
+          <p> work as front-end developer. trainer at gaza sky geeks </p>
+          <a href="http://www.github.com" alt="github" target="_blank"><i class="fa">&#xf092;</i></a>
+          <a href="https://www.linkedin.com/m" alt="linkedin" target="_blank"><i class="fa">&#xf0e1;</i></a >
+          <a href="http://www.github.com" alt="github" target="_blank"><i class="fa">&#xf0e0;</i></a>
+        </section>
+      </div>
     
-</body>
+  </div>
+</div>
+    <!--End backFace-->
+
+    <!-- End Our Team -->
+  </body>
 </html>
