--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./assets/CSS/style.css">
+  <link rel="stylesheet" href="./assets/CSS/style1.css">
   <title>MOYA(R) portfolio</title>
 </head>
 
@@ -180,7 +180,7 @@
           <a href="http://www.github.com" alt="github" target="_blank"><i class="fa">&#xf0e0;</i></a>
         </section>
       </div>
-      
+
       <div class="card">
         <!--start frontFace-->
         <section class="front">
@@ -206,6 +206,15 @@
   <!--End backFace-->
 
   <!-- End Our Team -->
+  <div class="contact"> 
+    <form>
+      <input type="text" name="Name" placeholder="name"> 
+      <input type="email" name="email" placeholder="email" required> <br>
+      <input type="text" name="subject" subject="email" placeholder="Subject" required> <br>
+      <textarea rows="6" cols="50s" placeholder="write your message here " required></textarea> <br>
+      <button>Send Message </button>
+    </form>
+  </div>
 
   <script src="https://kit.fontawesome.com/cea4c25e73.js" crossorigin="anonymous"></script>
   <script src="./assets/js/main.js"></script>
