--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
       <div class="container">
         <header class="hero-section--header">
           <div class="logo-section">
-            <h1 class="logo-section__logo-text"><img src="./assets/img/Logo.png" alt="log-im" width="150px" height="auto" ></h1>
+            <h1 class="logo-section__logo-text">
+              <img src="./assets/img/Logo.png" alt="log-im" width="150" >
+            </h1>
           </div>
           <div class="navbar">
             <ul>
@@ -71,26 +73,23 @@
           <i class="fas fa-bars"></i>
         </button>
         <div class="logo-section">
-          <h1 class="logo-section__logo-text"><img src="./assets//img/Logo.png" alt="log-im" width="100px"
-              height="auto"></h1>
+          <h1 class="logo-section__logo-text">
+            <img src="./assets//img/Logo.png" alt="log-im" width="100">
+          </h1>
         </div>
         <div class="collapse-navbar--container">
           <!-- <div class="logo-section">
             <h1 class="logo-section__logo-text">MOYA TEAM</h1>
           </div> -->
           <div class="logo-section">
-<<<<<<< HEAD
-            <h1 class="logo-section__logo-text"><img src="./assets//img/Logo.png" alt="log-im" width="100px"
-                height="auto"></h1>
-=======
-            <img src="./assets/img/Logo.png" alt="log-im" width="100px" height="auto" >
+            <img src="./assets/img/Logo.png" alt="log-im" width="100" >
           </div>
           <div class="collapse-navbar--container">
             <!-- <div class="logo-section">
               <h1 class="logo-section__logo-text">MOYA TEAM</h1>
             </div> -->
             <div class="logo-section">
-              <img src="./assets/img/Logo.png" alt="log-im" width="100px" height="auto" >
+              <img src="./assets/img/Logo.png" alt="log-im" width="100" >
             </div>
             <ul>
               <li class="item-link">
@@ -100,7 +99,6 @@
               <li class="item-link"><a href="#team">Our Team</a></li>
               <li class="item-link"><a href="#contact">Contact Us</a></li>
             </ul>
->>>>>>> 198023e2a1618e35f92a63fe6eb5df6772b780a5
           </div>
           <ul>
             <li class="item-link">
