--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <div class="navbar">
             <ul>
               <li class="item-link">
-                <a clss="active" href="#service">Our Service</a>
+                <a class="active" href="#service">Our Service</a>
               </li>
               <li class="item-link"><a href="#aboutus">About Us</a></li>
               <li class="item-link"><a href="#team">Our Team</a></li>
@@ -48,7 +48,7 @@
         <div class="navbar">
           <ul>
             <li class="item-link">
-              <a clss="active" href="#service">Our Service</a>
+              <a class="active" href="#service">Our Service</a>
             </li>
             <li class="item-link"><a href="#aboutus">About Us</a></li>
             <li class="item-link"><a href="#team">Our Team</a></li>
@@ -93,7 +93,7 @@
             </div>
             <ul>
               <li class="item-link">
-                <a clss="active" href="#service">Our Service</a>
+                <a class="active" href="#service">Our Service</a>
               </li>
               <li class="item-link"><a href="#aboutus">About Us</a></li>
               <li class="item-link"><a href="#team">Our Team</a></li>
@@ -102,7 +102,7 @@
           </div>
           <ul>
             <li class="item-link">
-              <a clss="active" href="#service">Our Service</a>
+              <a class="active" href="#service">Our Service</a>
             </li>
             <li class="item-link"><a href="#aboutus">About Us</a></li>
             <li class="item-link"><a href="#team">Our Team</a></li>
