fix stray end tag Relates #20

--- a/index.html
+++ b/index.html
@@ -1,49 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="./assets/CSS/style1.css" />
-    <title>Document</title>
-  </head>
-  <body>
-    <section class="hero-section">
-      <div class="header-img"></div>
-      <div class="container">
-        <header class="hero-section--header">
-          <div class="logo-section">
-            <h1 class="logo-section__logo-text">
-              <img src="./assets/img/Logo.png" alt="log-im" width="150" >
-            </h1>
-          </div>
-          <div class="navbar">
-            <ul>
-              <li class="item-link">
-                <a class="active" href="#service">Our Service</a>
-              </li>
-              <li class="item-link"><a href="#aboutus">About Us</a></li>
-              <li class="item-link"><a href="#team">Our Team</a></li>
-              <li class="item-link"><a href="#contact">Contact Us</a></li>
-            </ul>
-          </div>
-        </header>
-        <div class="hero-section--content">
-          <h2 class="hero-section--content__contact-header">
-            "Lorem ipsum, dolor sit amet consectetur."
-          </h2>
-          <p class="hero-section--content__contact-dec">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque
-            repellendus quo quasi voluptatem cum accusantium! Necessitatibus
-            deleniti neque saepe possimus fugiat quod ab a fugit sed. Sit
-            nostrum culpa corrupti!
-          </p>
-          <a href="#contact" class="hero-section--content__contact-btn"
-            >Contact Us</a
-          >
+<html lang = "en">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="./assets/CSS/style1.css" />
+  <title>Document</title>
+</head>
+
+<body>
+  <section class="hero-section">
+    <div class="header-img"></div>
+    <div class="container">
+      <header class="hero-section--header">
+        <div class="logo-section">
+          <h1 class="logo-section__logo-text">
+            <img src="./assets/img/Logo.png" alt="log-im" width="150">
+          </h1>
         </div>
         <div class="navbar">
           <ul>
@@ -56,6 +30,28 @@
           </ul>
         </div>
       </header>
+      <div class="hero-section--content">
+        <h2 class="hero-section--content__contact-header">
+          "Lorem ipsum, dolor sit amet consectetur."
+        </h2>
+        <p class="hero-section--content__contact-dec">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque
+          repellendus quo quasi voluptatem cum accusantium! Necessitatibus
+          deleniti neque saepe possimus fugiat quod ab a fugit sed. Sit
+          nostrum culpa corrupti!
+        </p>
+        <a href="#contact" class="hero-section--content__contact-btn">Contact Us</a>
+      </div>
+      <div class="navbar">
+        <ul>
+          <li class="item-link">
+            <a class="active" href="#service">Our Service</a>
+          </li>
+          <li class="item-link"><a href="#aboutus">About Us</a></li>
+          <li class="item-link"><a href="#team">Our Team</a></li>
+          <li class="item-link"><a href="#contact">Contact Us</a></li>
+        </ul>
+      </div>
       <div class="hero-section--content">
         <h2 class="hero-section--content__contact-header">
           "Lorem ipsum, dolor sit amet consectetur."
@@ -82,14 +78,14 @@
             <h1 class="logo-section__logo-text">MOYA TEAM</h1>
           </div> -->
           <div class="logo-section">
-            <img src="./assets/img/Logo.png" alt="log-im" width="100" >
+            <img src="./assets/img/Logo.png" alt="log-im" width="100">
           </div>
           <div class="collapse-navbar--container">
             <!-- <div class="logo-section">
               <h1 class="logo-section__logo-text">MOYA TEAM</h1>
             </div> -->
             <div class="logo-section">
-              <img src="./assets/img/Logo.png" alt="log-im" width="100" >
+              <img src="./assets/img/Logo.png" alt="log-im" width="100">
             </div>
             <ul>
               <li class="item-link">
@@ -132,7 +128,7 @@
   <section id="our-services">
     <div class="our-services__container">
       <h1 class="our-services__title">Our Services</h1>
-      <di{v class="our-services__Services-container">
+      <div class="our-services__Services-container">
         <div class="service service__shap1">
           <div class="services-topBar"></div>
           <img class="service-icon" src="./img/Our Services/Web developers icon.svg" alt="">
@@ -157,7 +153,7 @@
           <h1>Database Design</h1>
           <p>orem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec </p>
         </div>
-    </div>
+      </div>
     </div>
   </section>
   <!-- Satrt ourteam-->
@@ -178,9 +174,9 @@
         <section class="back">
           <h3>About Me </h3>
           <p> work as front-end developer. trainer at gaza sky geeks </p>
-          <a href="http://www.github.com" alt="github" target="_blank"><i class="fa">&#xf092;</i></a>
-          <a href="https://www.linkedin.com/" alt="linkedin" target="_blank"><i class="fa">&#xf0e1;</i></a>
-          <a href="http://www.github.com" alt="github" target="_blank"><i class="fa">&#xf0e0;</i></a>
+          <a href="http://www.github.com" target="_blank"><i class="fa">&#xf092;</i></a>
+          <a href="https://www.linkedin.com" target="_blank"><i class="fa">&#xf0e1;</i></a>
+          <a href="http://www.github.com" target="_blank"><i class="fa">&#xf0e0;</i></a>
         </section>
       </div>
 
@@ -198,9 +194,9 @@
         <section class="back">
           <h3>About Me </h3>
           <p> work as front-end developer. trainer at gaza sky geeks </p>
-          <a href="http://www.github.com" alt="github" target="_blank"><i class="fa">&#xf092;</i></a>
-          <a href="https://www.linkedin.com/" alt="linkedin" target="_blank"><i class="fa">&#xf0e1;</i></a>
-          <a href="http://www.github.com" alt="github" target="_blank"><i class="fa">&#xf0e0;</i></a>
+          <a href="http://www.github.com" target="_blank"><i class="fa">&#xf092;</i></a>
+          <a href="https://www.linkedin.com" target="_blank"><i class="fa">&#xf0e1;</i></a>
+          <a href="http://www.github.com" target="_blank"><i class="fa">&#xf0e0;</i></a>
         </section>
       </div>
 
@@ -218,9 +214,9 @@
         <section class="back">
           <h3>About Me</h3>
           <p> work as front-end developer. trainer at gaza sky geeks </p>
-          <a href="http://www.github.com" alt="github" target="_blank"><i class="fa">&#xf092;</i></a>
-          <a href="https://www.linkedin.com/" alt="linkedin" target="_blank"><i class="fa">&#xf0e1;</i></a>
-          <a href="http://www.github.com" alt="github" target="_blank"><i class="fa">&#xf0e0;</i></a>
+          <a href="http://www.github.com" target="_blank"><i class="fa">&#xf092;</i></a>
+          <a href="https://www.linkedin.com" target="_blank"><i class="fa">&#xf0e1;</i></a>
+          <a href="http://www.github.com" target="_blank"><i class="fa">&#xf0e0;</i></a>
         </section>
       </div>
 
@@ -238,9 +234,9 @@
         <section class="back">
           <h3>About Me</h3>
           <p> work as front-end developer. trainer at gaza sky geeks </p>
-          <a href="http://www.github.com" alt="github" target="_blank"><i class="fa">&#xf092;</i></a>
-          <a href="https://www.linkedin.com/m" alt="linkedin" target="_blank"><i class="fa">&#xf0e1;</i></a>
-          <a href="http://www.github.com" alt="github" target="_blank"><i class="fa">&#xf0e0;</i></a>
+          <a href="http://www.github.com" target="_blank"><i class="fa">&#xf092;</i></a>
+          <a href="https://www.linkedin.com" target="_blank"><i class="fa">&#xf0e1;</i></a>
+          <a href="http://www.github.com" target="_blank"><i class="fa">&#xf0e0;</i></a>
         </section>
       </div>
 
@@ -249,12 +245,12 @@
   <!--End backFace-->
 
   <!-- End Our Team -->
-  <div class="contact"> 
+  <div class="contact">
     <form>
-      <input type="text" name="Name" placeholder="name"> 
+      <input type="text" name="Name" placeholder="name">
       <input type="email" name="email" placeholder="email" required> <br>
-      <input type="text" name="subject" subject="email" placeholder="Subject" required> <br>
-      <textarea rows="6" cols="50s" placeholder="write your message here " required></textarea> <br>
+      <input type="text" name="subject" placeholder="Subject" required> <br>
+      <textarea rows="6" cols="50" placeholder="write your message here " required></textarea> <br>
       <button>Send Message </button>
     </form>
   </div>
@@ -262,21 +258,6 @@
   <script src="https://kit.fontawesome.com/cea4c25e73.js" crossorigin="anonymous"></script>
   <script src="./assets/js/main.js"></script>
 
-</body>
-
-</html>
-
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="./assets/CSS/style.css" />
-
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
-
-  <title>Document</title>
-</head>
-
-<body>
 </body>
 
 </html>
