--- a/index.html
+++ b/index.html
@@ -22,11 +22,17 @@
         <div class="navbar">
           <ul>
             <li class="item-link">
-              <a class="active" href="#service">Our Service</a>
+              <a href="#aboutus">About Us</a>
             </li>
-            <li class="item-link"><a href="#aboutus">About Us</a></li>
-            <li class="item-link"><a href="#team">Our Team</a></li>
-            <li class="item-link"><a href="#contact">Contact Us</a></li>
+            <li class="item-link">
+              <a href="#our-services">Our Service</a>
+            </li>
+            <li class="item-link">
+              <a href="#team">Our Team</a>
+            </li>
+            <li class="item-link">
+              <a href="#contact">Contact Us</a>
+            </li>
           </ul>
         </div>
       </header>
@@ -109,7 +115,7 @@
     </div>
   </section>
 
-  <section class="about-us-section">
+  <section id="aboutus" class="about-us-section">
     <div class="bout-us-section__container">
       <div class="container-details">
         <h1>About Us</h1>
@@ -157,7 +163,7 @@
     </div>
   </section>
   <!-- Satrt ourteam-->
-  <div class="container-team">
+  <section id="team" class="container-team">
     <h2>Ou<span>r Te</span>am</h2>
     <div class="container-team-card">
       <div class="card">
@@ -241,11 +247,11 @@
       </div>
 
     </div>
-  </div>
+  </section>
   <!--End backFace-->
 
   <!-- End Our Team -->
-  <div class="contact">
+  <div id="contact" class="contact">
     <form>
       <input type="text" name="Name" placeholder="name">
       <input type="email" name="email" placeholder="email" required> <br>
