Organize file structure (images folders) Relates #26

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <header class="hero-section--header">
         <div class="logo-section">
           <h1 class="logo-section__logo-text">
-            <img src="./assets/img/Logo.png" alt="log-im" width="150">
+            <img src="./assets/images/Logo/Logo.png" alt="log-im" width="150">
           </h1>
         </div>
         <div class="navbar">
@@ -126,7 +126,7 @@
         </p>
       </div>
       <div class="img-aboutUS">
-        <img src="./assets/img/ClassicGroup_OfficePic.jpg" alt="" />
+        <img src="./assets/images/about us/ClassicGroup_OfficePic.jpg" alt="" />
       </div>
     </div>
   </section>
@@ -137,26 +137,26 @@
       <div class="our-services__Services-container">
         <div class="service service__shap1">
           <div class="services-topBar"></div>
-          <img class="service-icon" src="./img/Our Services/Web developers icon.svg" alt="">
+          <img class="service-icon" src="./assets/images/Our Services/Web_developers_icon.svg" alt="">
           <h1>Web developers</h1>
           <p>orem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec </p>
         </div>
         <div class="service service__shap2">
           <div class="services-topBar"></div>
-          <img class="service-icon" src="./img/Our Services/UX and UI designers icon.svg" alt="">
+          <img class="service-icon" src="./assets/images/Our Services/UX_and_UI_designers_icon.svg" alt="">
           <h1>UX and UI designers</h1>
           <p>orem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec </p>
         </div>
         <div class="service service__shap2">
           <div class="services-topBar"></div>
-          <img class="service-icon" src="./img/Our Services/Database Design icon.svg" alt="">
+          <img class="service-icon" src="./assets/images/Our Services/Database_Design_icon.svg" alt="">
           <h1>Database Design</h1>
           <p>orem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec </p>
         </div>
         <div class="service service__shap1">
           <div class="services-topBar"></div>
-          <img class="service-icon" src="./img/Our Services/CMS Document icon.svg" alt="">
-          <h1>Database Design</h1>
+          <img class="service-icon" src="./assets/images/Our Services/CMS_Document_icon.svg" alt="">
+          <h1>CMS Document</h1>
           <p>orem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec </p>
         </div>
       </div>
