update readme file

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         <div class="service service__shap2">
           <div class="services-topBar"></div>
           <img class="service-icon" src="./assets/images/Our Services/UX_and_UI_designers_icon.svg" alt="">
-          <h1>UX and UI designers</h1>
+          <h1>UX and UI design</h1>
           <p>orem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec </p>
         </div>
         <div class="service service__shap2">
